GNOME Bugzilla – Bug 733217
AFP backend is slow due to Nagle's algorithm + delayed ACKs
Last modified: 2014-07-15 21:17:53 UTC
The AFP backend is very slow; e.g. duplicating 10000 files in Nautilus takes tens of minutes. I don't think it should be this slow.
Created attachment 280745 [details] [review] afp: Disable Nagle's algorithm Disable Nagle's algorithm for the connection to the server to improve performance. Due to the backend doing a write-write-read sequence, the combination of Nagle's algorithm and TCP delayed ACKs means that the second write is delayed until the server's delayed ACK timer times out (40ms on Linux). This results in each request-response taking far too long causing poor performance. This patch reduces the time it takes to duplicate a directory of 10000 small files from 21 minutes to 11 seconds.
The attached patch fixes the slowness issues I was seeing.
LGTM. Please Commit.
Comment on attachment 280745 [details] [review] afp: Disable Nagle's algorithm Pushed to master as 41778e950db34e52a69e382896ede4c0216ef8c6. Thanks for the review!